Update code for gruut 1.3.0
